--- a/css/style.css
+++ b/css/style.css
@@ -35,23 +35,39 @@
 }
 .titulo02{
     font-family: var(--Titulo);
-    font-size: 1.8em;
+    font-size: 1.2em;
     letter-spacing: .1em;
 
 }
 .resultados{
     font-family: var(--paragrafos);
-    font-size: 1.5em;
-    padding-bottom: 15px;
+    font-size: 1em;
+    padding-bottom: 2px;
 }
 figure{
     width: 130px;
 }
 figure img{
     border-radius: 70%;
+    border: 2px solid #000;
 }
 figure figcaption{
     font-family: var(--Titulo);
-    font-size: 1.2em;
+    font-size: 1em;
+    letter-spacing: .3em;
     text-align: center;
+    color: #fff;
+    background: #000;
+
+}
+
+
+.curriculo{
+    width: 460px;
+    display: grid;
+    grid-template-columns: 200px 200px;
+    gap: 10px 20px;
+    border: 2px solid #000;
+    padding: 20px;
+    margin: 0 auto;
 }
