--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,18 @@
 *{
     padding: 0;
     margin: 0;
-    /* font-family: 'Tilt Prism', cursive;
-    font-family: 'Arimo', sans-serif; */
 }
 :root{
     --Titulo: 'Tilt Prism', cursive;
     --paragrafos: 'Arimo', sans-serif;
+    --textoEscuro: rgba(31, 43, 2, 0.418);
 }
 
 /* BACKGROUND */
 .bg-main{
     height: 100vh;
     background: rgba(115, 153, 26, 0.418);
-    padding: 40px;
+    /* padding: 40px; */
 }
 
 
@@ -50,6 +49,7 @@ figure{
 figure img{
     border-radius: 70%;
     border: 2px solid #000;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 figure figcaption{
     font-family: var(--Titulo);
@@ -58,7 +58,7 @@ figure figcaption{
     text-align: center;
     color: #fff;
     background: #000;
-
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 
@@ -67,7 +67,29 @@ figure figcaption{
     display: grid;
     grid-template-columns: 200px 200px;
     gap: 10px 20px;
-    border: 2px solid #000;
+    border-radius: 10px;
     padding: 20px;
     margin: 0 auto;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border: 2px solid #000;
+
+
+}
+.btn-position{
+    display: flex;
+    padding: 30px 0;
+}
+.btn{
+    font-size: 1.2em;
+    font-family: var(--Titulo);
+    letter-spacing: .3em;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 4px;
+    margin: 10px auto;
+    border: none;
+
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    color: #fff;
+    background: #000;
 }
