--- a/css/teste-api-03.css
+++ b/css/teste-api-03.css
@@ -17,21 +17,23 @@ a {
 
 /* BACKGROUND */
 .bg-section {
-  width: 500px;
+  width: 900px;
   margin: 0 auto;
   background: linear-gradient(
     90deg,
-    hsla(220, 22%, 55%, 1) 0%,
-    hsla(221, 45%, 73%, 1) 100%
+    rgb(85, 101, 133) 0%,
+    rgb(43, 148, 134) 100%
   );
 }
 .titulo {
+  font-family: var(--Titulo);
   font-size: 2em;
   font-weight: bold;
   text-align: center;
 
 }
 .titu01 {
+  font-family: var(--paragrafos);
   font-size: 1.2em;
   font-weight: bold;
   text-align: center;
@@ -46,55 +48,43 @@ a {
 
 /* Container */
 .container {
+  width: 95%;
+  margin: 0 auto;
+}
+
+/* galeria */
+.galeria{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.doSpan{
+  font-weight: bold;
+  font-size: 1.5em;
+  margin: 0 10px;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid #000;
+  color: #000;
+}
+.doSpan:hover{
+  border: 2px solid #3b3535;
+  color: #3b3535;
+}
+figure{
+  width: 80%;
+  height: 390px;
+}
+figure img{
+  padding-top: 10px;
   width: 100%;
+  height: 350px;
+  border-radius: 10px;
 }
-
-/* formulario */
-.formulario{
-    width: 80%;
-    padding: 10px;
-    margin: 0 auto 10px auto;
-    display: flex;
-    flex-direction: column;
-}
-.formulario label{
-    font-size: 1.3em;
-    text-align: center;
-    margin: 5px 0;
-}
-.formulario input{
-    height: 30px;
-    font-size: 1.3em;
-    text-align: center;
-    margin: 5px 0;
-    border: 2px solid rgb(110, 123, 150);
-
-    background:  rgb(218, 219, 221);
-    color: #000;
-}
-.btn{
-    font-size: 1.1em;
-    width: 110px;
-    letter-spacing: .1em;
-    padding: 1px;
-    margin: 5px auto;
-    cursor: pointer;
-}
-
-/* tela, aparecer o significad */
-.tela{
-    width: 70%;
-    margin: 0 auto;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-}
-.tela .cabecalho{
-    font-size: 1.3em;
-    letter-spacing: .1em;
-    padding-bottom: 1px;
-}
-.tela .significados{
-    font-size: 1em;
-    padding-bottom: 10px;
+figure figcaption{
+  font-size: 1.2em;
+  font-family: var(--paragrafos);
+  text-align: center;
+  letter-spacing: .2em;
 }
