--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
   margin: 0;
   color: #fff;
 }
+a{
+  text-decoration: none;
+}
 li {
   list-style: none;
 }
@@ -173,14 +176,63 @@ body {
 }
 /* Quebra01  ---------------------------- */
 .container .quebra01 {
-    height: 90px;
+    height: 400px;
     grid-area: quebra01;
     border-radius: 10px;
-  
+    display: flex;
+    align-items: center;
     box-shadow: var(--sombra);
-    background: var(--bg-padrao);
+    background: url(../img/quebra/bg.png);
   }
+.quebra01 h1{
+  font-family: var(--Titulo);
+  font-size: 48px;
+  width: 100px;
+  margin-left: 40px;
 
+  color: var(--Titulo-cor);
+}
+.quebra-texto{
+  margin-left: 100px;
+  height: 200px;
+}
+.quebra-texto h2{
+  font-size: 20px;
+  font-family: var(--Titulo);
+  margin-bottom: 20px;
+
+  color: var(--bg-padrao);
+}
+.quebra-texto p{
+  font-size: 13px;
+  line-height: 20px;
+  letter-spacing: .1em;
+  margin-bottom: 20px;
+
+  color: var(--bg-padrao);
+}
+.quebra-texto .btn {
+  width: 140px;
+  margin-left: 0;
+  text-align: center;
+}
+
+.quebra-naBolinha{
+  width: 700px;
+  height: 240px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin-top: 100px;
+
+  background: url(../img/quebra/Ellipse\ 8.png) no-repeat center;
+  background: cover;
+}
+.quebra-naBolinha p{
+  width: 270px;
+  line-height: 25px;
+  color: var(--Titulo-cor);
+}
   /* section02  ---------------------------- */
 .container .section02 {
     grid-area: section02;
